--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "chart.js": "^3.6.0",
+    "compression": "^1.7.4",
+    "express": "^4.17.2",
     "html-react-parser": "^1.4.1",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
+    "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
